# ebi_mpl

./: README.md  README_ja.md  pyproject.toml
.github/workflows/: release.yml
mpl_someyalab/: presentation.mplstyle
sample/: plot.py
