[project]
name = "mpl_someyalab"
version = "0.1.0"
description = "A collection of custom Matplotlib styles."
authors = [
    { name = "Yusuke Ebihara", email = "ebihara@ntech.t.u-tokyo.ac.jp" },
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/ebiyu/mpl_someyalab"

[tool.setuptools]
packages = [
    "mpl_someyalab",
]

[tool.setuptools.package-data]
mpl_someyalab = ["styles/*.mplstyle", "*.mplstyle"]
